--- a/CTCOffice/.classpath
+++ b/CTCOffice/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="lib" path="C:/Users/vaters/Documents/Programming/Eclipse/eclipse/plugins/com.ibm.icu_52.1.0.v201404241930.jar" sourcepath="C:/Users/vaters/Documents/Programming/Eclipse/eclipse/plugins/com.ibm.icu.source_52.1.0.v201404241930.jar"/>
 	<classpathentry kind="lib" path="C:/Users/vaters/Documents/Programming/Eclipse/eclipse/plugins/org.eclipse.ui.forms_3.6.100.v20140422-1825.jar" sourcepath="C:/Users/vaters/Documents/Programming/Eclipse/eclipse/plugins/org.eclipse.ui.forms.source_3.6.100.v20140422-1825.jar"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
+	<classpathentry kind="lib" path="forms-1.3.0.jar" sourcepath="forms-1.3.0-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
